--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   google_fonts: ^1.0.0
+  cloud_firestore: ^0.13.5
 
 dev_dependencies:
   flutter_test:
